--- a/nr-add-examples/ig/collaborons.html
+++ b/nr-add-examples/ig/collaborons.html
@@ -18,14 +18,9 @@
     <link rel="stylesheet" href="assets/css/pygments-manni.css"/>
     <link rel="stylesheet" href="assets/css/jquery-ui.css"/>
   	<link rel="stylesheet" href="assets/css/prism.css"/>
-  	<link rel="stylesheet" href="assets/css/cqf.css"/>
     <link rel="stylesheet" href="assets/css/style-ans.css"/>
     <link rel="stylesheet" href="assets/css/style-add-ans.css"/>
       <!-- Placeholder for child template CSS declarations -->
-    <link rel="stylesheet" href="assets/css/aphp-ig.css"/>
-    <link rel="stylesheet" href="assets/css/prism-lang-fml.min.css"/>
-    <link rel="stylesheet" href="assets/css/prism-lang-fsh.min.css"/>
-
 
     <script src="fhir-table-scripts.js" type="text/javascript"> </script>
 
@@ -45,25 +40,19 @@
   <body onload="document.body.style.opacity='1'">
 
 	  <script src="assets/js/prism.js"></script>
-
-	    <!-- Ajouts AP-HP - couleurs FSH -->
-	  <script src="assets/js/prism-lang-fml.min.js" type="text/javascript"></script>
-	  <script src="assets/js/prism-lang-fsh.min.js" type="text/javascript"></script>
-	    <!-- Fin ajouts AP-HP - couleurs FSH -->
     <script src="assets/js/mermaid.js" type="text/javascript"></script>
     <script src="assets/js/mermaid-init.js" type="text/javascript"></script>
     <style type="text/css">h2{--heading-prefix:"5.3"}
     h3,h4,h5,h6{--heading-prefix:"5.3"}</style>
     <div id="segment-header" class="segment">    <!-- segment-header -->
       <div class="container">    <!-- container -->
-
           <!-- Placeholder for child template header declarations -->
 <div id="family-nav">
-    <a id="hl7-search-lnk" href="http://hl7.org/fhir" data-no-external="true"><img src="assets/images/fhir-logo-www.png" alt="Visit the FHIR website" height="50"/> </a>
+    <a no-external="true" id="hl7-search-lnk" href="http://hl7.org/fhir"><img src="assets/images/fhir-logo-www.png" alt="Visit the FHIR website" height="50"/> </a>
   </div>
   <div style="line-height: 50px; float: left; margin-top: 4px; margin-bottom: 8px; color: #808080; " id="ans-nav">
-    <a id="hl7-logo" href="https://esante.gouv.fr/" data-no-external="true"><img src="assets/images/logo-ANS.svg" alt="ANS Logo" height="50"/></a>
-    <a id="hl7-search-lnk" href="searchform.html" data-no-external="true"><img src="assets/images/search.png" alt="Search FHIR"/></a>
+    <a no-external="true" id="hl7-logo" href="https://esante.gouv.fr/"><img src="assets/images/logo-ANS.svg" alt="ANS Logo" height="50"/></a>
+    <a no-external="true" id="hl7-search-lnk" href="searchform.html"><img src="assets/images/search.png" alt="Search FHIR"/></a>
   </div>
 
   <div id="ig-search">
@@ -233,52 +222,52 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <p>  <!-- white space is critical inside of capture --></p>
 <div class="markdown-toc">
 <ul id="markdown-toc">
-  <li><a href="#développement-de-guides-dintéropérabilité-externe-à-vocation-dintégrer-le-ci-sis" id="markdown-toc-développement-de-guides-dintéropérabilité-externe-à-vocation-dintégrer-le-ci-sis">Développement de guides d'intéropérabilité externe à vocation d'intégrer le CI-SIS</a></li>
+  <li><a href="#développement-de-guides-dintéropérabilité-externe-à-vocation-dintégrer-le-ci-sis" id="markdown-toc-développement-de-guides-dintéropérabilité-externe-à-vocation-dintégrer-le-ci-sis">Développement de guides d’intéropérabilité externe à vocation d’intégrer le CI-SIS</a></li>
   <li><a href="#projectathon" id="markdown-toc-projectathon">Projectathon</a></li>
 </ul>
 
 </div>
-<p>L'interopérabilité française doit se construire de manière collaborative avec un maximum d'acteurs (développeurs, experts métiers, experts interopérabilité…).</p>
+<p>L’interopérabilité française doit se construire de manière collaborative avec un maximum d’acteurs (développeurs, experts métiers, experts interopérabilité…).</p>
 
-<p>FHIR étant très générique de base pour correspondre à tous les cas d'usages, il faut le contraindre pour gagner en interopérabilité. Ces contraintes sont définies au sein des profils, qui doivent être réutilisés au maximum afin d'être amélioré de manière collaborative.</p>
+<p>FHIR étant très générique de base pour correspondre à tous les cas d’usages, il faut le contraindre pour gagner en interopérabilité. Ces contraintes sont définies au sein des profils, qui doivent être réutilisés au maximum afin d’être amélioré de manière collaborative.</p>
 
-<p>Plusieurs types de profils existent déjà, avec une notion d'héritage :</p>
+<p>Plusieurs types de profils existent déjà, avec une notion d’héritage :</p>
 
 <ul>
   <li>
-    <p>les profils génériques, qui forment la base de l'écosystème FHIR français : FrCore et l'Annuaire Santé. Tous les autres profils doivent en dériver par héritage ;</p>
+    <p>les profils génériques, qui forment la base de l’écosystème FHIR français : FrCore et l’Annuaire Santé. Tous les autres profils doivent en dériver par héritage ;</p>
   </li>
   <li>
-    <p>les profils définis pour des cas d'usages spécifiques (<a href="https://interop.esante.gouv.fr/ig/fhir">cf catalogue des guides</a>)</p>
+    <p>les profils définis pour des cas d’usages spécifiques (<a href="https://interop.esante.gouv.fr/ig/fhir">cf catalogue des guides</a>)</p>
   </li>
 </ul>
 
 <p>Pour créer une nouvelle spécification, il sera ainsi nécessaire de :</p>
 
 <ul>
-  <li>Connaître l'écosystème français (connaître les différents guides d'implémentation ainsi que leurs héritages) ;</li>
+  <li>Connaître l’écosystème français (connaître les différents guides d’implémentation ainsi que leurs héritages) ;</li>
   <li>Maîtriser les bonnes pratiques définies dans ce guide ;</li>
   <li>Utiliser GitHub (poster des issues ou des Pull Requests) pour diffusion des travaux en open source.</li>
 </ul>
 
-<p>Si un sujet n'est pas encore traité en France, il est possible de proposer un nouveau sujet de travail pour poster un nouveau volet dans le cadre d'interopérabilité français en suivant la <a href="https://esante.gouv.fr/offres-services/ci-sis/demarche-elaboration">démarche d'élaboration</a>.</p>
+<p>Si un sujet n’est pas encore traité en France, il est possible de proposer un nouveau sujet de travail pour poster un nouveau volet dans le cadre d’interopérabilité français en suivant la <a href="https://esante.gouv.fr/offres-services/ci-sis/demarche-elaboration">démarche d’élaboration</a>.</p>
 
-<h3 id="développement-de-guides-dintéropérabilité-externe-à-vocation-dintégrer-le-ci-sis">Développement de guides d'intéropérabilité externe à vocation d'intégrer le CI-SIS</h3>
+<h3 id="développement-de-guides-dintéropérabilité-externe-à-vocation-dintégrer-le-ci-sis">Développement de guides d’intéropérabilité externe à vocation d’intégrer le CI-SIS</h3>
 
-<p>La création des guides d'implémentation FHIR ayant pour vocation d'intégrer le CI-SIS est ouverte à toute la communauté. On parlera ainsi d'Unité de Production (UP) externe.</p>
+<p>La création des guides d’implémentation FHIR ayant pour vocation d’intégrer le CI-SIS est ouverte à toute la communauté. On parlera ainsi d’Unité de Production (UP) externe.</p>
 
 <p>Pour que cela soit possible, il convient de respecter plusieurs points :</p>
 
 <ul>
-  <li>Le guide d'implémentation ne doit pas fournir d'avantage commercial à une société (pas de mention de produit / société)</li>
-  <li>Les travaux doivent être menés en groupe de travail ouverts à n'importe quel participant</li>
-  <li>L'ANS doit être informé de ces travaux avant leur début</li>
-  <li>Les travaux doivent être en cohérence avec l'écosystème : pas de chevauchement avec l'existant, héritage des profils FrCore, annuaire santé</li>
-  <li><a name="l484">​</a>Les <a href="bonnes_pratiques_modeler.html">bonnes pratiques</a> doivent être respectées, avec un maximum de critères de maturité.</li>
+  <li>Le guide d’implémentation ne doit pas fournir d’avantage commercial à une société (pas de mention de produit / société)</li>
+  <li>Les travaux doivent être menés en groupe de travail ouverts à n’importe quel participant</li>
+  <li>L’ANS doit être informé de ces travaux avant leur début</li>
+  <li>Les travaux doivent être en cohérence avec l’écosystème : pas de chevauchement avec l’existant, héritage des profils FrCore, annuaire santé</li>
+  <li><a name="l468">​</a>Les <a href="bonnes_pratiques_modeler.html">bonnes pratiques</a> doivent être respectées, avec un maximum de critères de maturité.</li>
   <li>Une concertation de minimum trois mois doit être lancée sur la plateforme <a href="https://participez.esante.gouv.fr">participez</a></li>
 </ul>
 
-<p>Si des travaux ont déjà été entamés, contactez-nous via la l'adresse email du CI-SIS (ci-sis@esante.gouv.fr). Une solution sera établie pour retrouver le cycle de développement classique (transformation au format IG, mise en qualité, héritage FrCore / Annuaire, concertation, …) pour publication dans le CI-SIS.</p>
+<p>Si des travaux ont déjà été entamés, contactez-nous via la l’adresse email du CI-SIS (ci-sis@esante.gouv.fr). Une solution sera établie pour retrouver le cycle de développement classique (transformation au format IG, mise en qualité, héritage FrCore / Annuaire, concertation, …) pour publication dans le CI-SIS.</p>
 
 <h3 id="projectathon">Projectathon</h3>
 
@@ -327,13 +316,12 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 12, 2026 09:48+0000">2026-01-12</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Jan 30, 2026 15:21+0000">2026-01-30</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
-            Liens : <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières</a> |
-<a style="color: var(--footer-hyperlink-text-color)" href="qa.html">QA</a> |
-<a style="color: var(--footer-hyperlink-text-color)" href="https://interop.esante.gouv.fr/ig/documentation/history.html" target="_blank">Historique des versions</a>
-<a style="color: var(--footer-hyperlink-text-color)" href="https://interop.esante.gouv.fr/ig/documentation" target="_blank">Documentation</a>
+            Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
+<a style="color: var(--footer-hyperlink-text-color)" href="qa.html">QA </a> |
+<a style="color: var(--footer-hyperlink-text-color)" href="https://interop.esante.gouv.fr/ig/documentation/history.html" target="_blank">Historique des versions </a>
  | <a style="color: var(--footer-hyperlink-text-color)" href="https://github.com/ansforge/IG-documentation/issues" target="_blank">New Issue</a>
 
           
