--- a/nr-add-examples/ig/impl_demarrer_sur_fhir.html
+++ b/nr-add-examples/ig/impl_demarrer_sur_fhir.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-    <title>Quick start FHIR - Documentation des guides d&#39;implémentation de l&#39;ANS v0.1.9</title>
+    <title>Quick start FHIR - Documentation des guides d'implémentation de l'ANS v0.1.9</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -18,14 +18,9 @@
     <link href="assets/css/pygments-manni.css" rel="stylesheet"/>
     <link href="assets/css/jquery-ui.css" rel="stylesheet"/>
   	<link href="assets/css/prism.css" rel="stylesheet" />
-  	<link href="assets/css/cqf.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style-ans.css"/>
     <link rel="stylesheet" href="assets/css/style-add-ans.css"/>
     <!-- Placeholder for child template CSS declarations -->
-    <link href="assets/css/aphp-ig.css" rel="stylesheet"/>
-    <link href="assets/css/prism-lang-fml.min.css" rel="stylesheet"/>
-    <link href="assets/css/prism-lang-fsh.min.css" rel="stylesheet"/>
-
 
     <script type="text/javascript" src="fhir-table-scripts.js"> </script>
 
@@ -45,25 +40,19 @@
   <body onload="document.body.style.opacity='1'">
 
 	  <script src="assets/js/prism.js"></script>
-
-	  <!-- Ajouts AP-HP - couleurs FSH -->
-	  <script type="text/javascript" src="assets/js/prism-lang-fml.min.js"></script>
-	  <script type="text/javascript" src="assets/js/prism-lang-fsh.min.js"></script>
-	  <!-- Fin ajouts AP-HP - couleurs FSH -->
     <script type="text/javascript" src="assets/js/mermaid.js"></script>
     <script type="text/javascript" src="assets/js/mermaid-init.js"></script>
     <style type="text/css">h2{--heading-prefix:"4"}
     h3,h4,h5,h6{--heading-prefix:"4.0"}</style>
     <div id="segment-header" class="segment">  <!-- segment-header -->
       <div class="container">  <!-- container -->
-
         <!-- Placeholder for child template header declarations -->
 <div id="family-nav">
-    <a id="hl7-search-lnk" data-no-external="true" href="http://hl7.org/fhir"><img height="50" alt="Visit the FHIR website" src="assets/images/fhir-logo-www.png"/> </a>
+    <a id="hl7-search-lnk" no-external="true" href="http://hl7.org/fhir"><img height="50" alt="Visit the FHIR website" src="assets/images/fhir-logo-www.png"/> </a>
   </div>
   <div id="ans-nav" style="line-height: 50px; float: left; margin-top: 4px; margin-bottom: 8px; color: #808080; ">
-    <a id="hl7-logo" data-no-external="true" href="https://esante.gouv.fr/"><img height="50" alt="ANS Logo" src="assets/images/logo-ANS.svg"/></a>
-    <a id="hl7-search-lnk" data-no-external="true" href="searchform.html"><img alt="Search FHIR" src="assets/images/search.png"/></a>
+    <a id="hl7-logo" no-external="true" href="https://esante.gouv.fr/"><img height="50" alt="ANS Logo" src="assets/images/logo-ANS.svg"/></a>
+    <a id="hl7-search-lnk" no-external="true" href="searchform.html"><img alt="Search FHIR" src="assets/images/search.png"/></a>
   </div>
 
   <div id="ig-search">
@@ -234,7 +223,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <div>
 <!-- do not remove - needed to prevent Jekyll from adding a p tag to any non block level element in the markdown.-->
 </div>
-<p>Nos guides d'implémentation se basent sur la norme HL7 FHIR. Ils utilisent la terminologie, les notations et les principes de conception propres à FHIR. Avant de lire le guide d'implémentation, il est important de se familiariser avec certains des principes de base de FHIR ainsi qu'avec des conseils généraux sur la façon de lire les spécifications FHIR. Les lecteurs qui ne connaissent pas FHIR sont encouragés à lire (ou au moins à survoler) ce qui suit avant d'explorer plus en avant nos guides d'implémentation.</p>
+<p>Nos guides d’implémentation se basent sur la norme HL7 FHIR. Ils utilisent la terminologie, les notations et les principes de conception propres à FHIR. Avant de lire le guide d’implémentation, il est important de se familiariser avec certains des principes de base de FHIR ainsi qu’avec des conseils généraux sur la façon de lire les spécifications FHIR. Les lecteurs qui ne connaissent pas FHIR sont encouragés à lire (ou au moins à survoler) ce qui suit avant d’explorer plus en avant nos guides d’implémentation.</p>
 
 <p>Liste des implémentations open source :</p>
 
@@ -282,15 +271,15 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   </li>
  </ul>
 
-<p>N'hésitez pas à explorer d'autres aspects de la spécification FHIR qui vous semblent pertinents ou intéressants par rapport à vos besoins.</p>
+<p>N’hésitez pas à explorer d’autres aspects de la spécification FHIR qui vous semblent pertinents ou intéressants par rapport à vos besoins.</p>
 
 <h3 id="le-serveur-multi-terminologies">Le Serveur Multi Terminologies</h3>
 
-<p>Les artifacts terminologiques (Terminologies et Jeux de Valeurs) pour usage français sont accessibles par consultation du <a href="https://smt.esante.gouv.fr">Serveur Multi Terminologies (SMT)</a> de l'ANS. Le SMT permet d'accéder à ces artifacts de différentes manières : par API FHIR, par interface graphique, par des requêtes SPARQL … Ce service est complémentaire aux guides d'implémentation en permettant d'obtenir, via des jeux de valeurs (ValueSet), l'ensemble des concepts codés pour un contexte particulier.</p>
+<p>Les artifacts terminologiques (Terminologies et Jeux de Valeurs) pour usage français sont accessibles par consultation du <a href="https://smt.esante.gouv.fr">Serveur Multi Terminologies (SMT)</a> de l’ANS. Le SMT permet d’accéder à ces artifacts de différentes manières : par API FHIR, par interface graphique, par des requêtes SPARQL … Ce service est complémentaire aux guides d’implémentation en permettant d’obtenir, via des jeux de valeurs (ValueSet), l’ensemble des concepts codés pour un contexte particulier.</p>
 
-<p>Ces jeux de valeurs peuvent reprendre des concepts définis dans des terminologies de deux manières : via l'ajout de concept unitaire, ou via l'ajout de règles logiques (Exemple : l'ensemble des pathologies du système nerveux de la terminologie CIM-10).</p>
+<p>Ces jeux de valeurs peuvent reprendre des concepts définis dans des terminologies de deux manières : via l’ajout de concept unitaire, ou via l’ajout de règles logiques (Exemple : l’ensemble des pathologies du système nerveux de la terminologie CIM-10).</p>
 
-<p>Pour accéder à la liste de codes associés à un jeu de valeurs indiqué en utilisant une règle logique, il existe une opération FHIR appelée <a href="https://www.hl7.org/fhir/R4/valueset-operation-expand.html">$expand</a> permettant d'obtenir l'ensemble des codes par expansion. Cette opération est permise par le FHIR Terminology Service du Serveur Multi Terminologique dans les cas où les terminologies sont disponibles.</p>
+<p>Pour accéder à la liste de codes associés à un jeu de valeurs indiqué en utilisant une règle logique, il existe une opération FHIR appelée <a href="https://www.hl7.org/fhir/R4/valueset-operation-expand.html">$expand</a> permettant d’obtenir l’ensemble des codes par expansion. Cette opération est permise par le FHIR Terminology Service du Serveur Multi Terminologique dans les cas où les terminologies sont disponibles.</p>
 
 
 
@@ -333,13 +322,12 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Jan 12, 2026 09:48+0000">2026-01-12</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Jan 30, 2026 15:21+0000">2026-01-30</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
-            Liens : <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières</a> |
-<a style="color: var(--footer-hyperlink-text-color)" href="qa.html">QA</a> |
-<a style="color: var(--footer-hyperlink-text-color)" target="_blank" href="https://interop.esante.gouv.fr/ig/documentation/history.html">Historique des versions</a>
-<a style="color: var(--footer-hyperlink-text-color)" target="_blank" href="https://interop.esante.gouv.fr/ig/documentation">Documentation</a>
+            Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
+<a style="color: var(--footer-hyperlink-text-color)" href="qa.html">QA </a> |
+<a style="color: var(--footer-hyperlink-text-color)" target="_blank" href="https://interop.esante.gouv.fr/ig/documentation/history.html">Historique des versions </a>
  | <a style="color: var(--footer-hyperlink-text-color)" target="_blank" href="https://github.com/ansforge/IG-documentation/issues">New Issue</a>
 
           </span>
