--- a/nr-add-examples/ig/mod_bonnes_pratiques.html
+++ b/nr-add-examples/ig/mod_bonnes_pratiques.html
@@ -230,6 +230,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <li><a href="#le-choix-de-la-version-fhir" id="markdown-toc-le-choix-de-la-version-fhir">Le choix de la version FHIR</a></li>
   <li><a href="#règles-dutilisation-de-github" id="markdown-toc-règles-dutilisation-de-github">Règles d’utilisation de GitHub</a></li>
   <li><a href="#modèle-de-nommage-par-ressource-fhir" id="markdown-toc-modèle-de-nommage-par-ressource-fhir">Modèle de nommage par ressource FHIR</a></li>
+  <li><a href="#modèle-de-nommage-des-pages-markdown" id="markdown-toc-modèle-de-nommage-des-pages-markdown">Modèle de nommage des pages markdown</a></li>
 </ul>
 
 </div>
@@ -292,7 +293,7 @@ TODO : rajouter lien vers la procédure de création d'un VS -->
 
 <h3 id="règles-de-nommage-des-ressources-de-conformité">Règles de nommage des ressources de conformité</h3>
 
-<p><a name="l519">​</a>Ces règles de nommage ont été établies en s’inspirant des ressources us-core et des bonnes pratiques indiquées <a href="[https://build.fhir.org/ig/HL7/crmi-ig/artifact-conventions.html](https://hl7.org/fhir/uv/crmi/STU1/)">ici</a>.</p>
+<p><a name="l523">​</a>Ces règles de nommage ont été établies en s’inspirant des ressources us-core et des bonnes pratiques indiquées <a href="[https://build.fhir.org/ig/HL7/crmi-ig/artifact-conventions.html](https://hl7.org/fhir/uv/crmi/STU1/)">ici</a>.</p>
 
 <table class="grid">
   <thead>
@@ -520,7 +521,7 @@ Chaque fiche présente les propriétés obligatoires de l’objet, avec le nom d
     </tr>
     <tr>
       <td>nom du fichier</td>
-      <td>Profiles/NomDuProfilProfile.fsh</td>
+      <td>Profile-resource/NomDuProfilProfile.fsh</td>
     </tr>
   </tbody>
 </table>
@@ -667,18 +668,11 @@ Description: "Description du modèle logique."
 
 <p>Exemples d’entête de fichiers FSH :</p>
 
-<pre><code class="language-fsh">Instance: uuid
-InstanceOf: Resource
-Title: "Titre de l'exemple"
-Description: "Description de l'exemple."
-Usage: #example
-</code></pre>
-
 <pre><code class="language-fsh">Instance: nom-de-l-organisation
 InstanceOf: Organization
 Title: "Titre de l'organisation"
 Description: "Description de l'organisation."
-Usage: #definition
+Usage: #inline
 
 * name = "NomDeLOrganization"
 </code></pre>
@@ -735,7 +729,7 @@ Usage: #example
     </tr>
     <tr>
       <td>nom du fichier</td>
-      <td>Instances/StructureMap-NomStructureMap.fml</td>
+      <td>StructureMaps/StructureMap-NomStructureMap.fml</td>
     </tr>
   </tbody>
 </table>
@@ -783,7 +777,7 @@ Usage: #example
     </tr>
     <tr>
       <td>nom du fichier</td>
-      <td>Instances/NomDeLaRessourceInstance.fsh</td>
+      <td>CapabilityStatements/NomDeLaRessourceInstance.fsh</td>
     </tr>
   </tbody>
 </table>
@@ -831,7 +825,7 @@ Usage: #definition
     </tr>
     <tr>
       <td>nom du fichier</td>
-      <td>Instances/NomDeLaRessourceSearchParameter.fsh</td>
+      <td>SearchParameters/NomDeLaRessourceSearchParameter.fsh</td>
     </tr>
   </tbody>
 </table>
@@ -850,6 +844,10 @@ Usage: #definition
 * description = "Description du search parameter."
 * type = #number | #date | #string | #token | #reference | #composite | #quantity | #uri | #special
 </code></pre>
+
+<h3 id="modèle-de-nommage-des-pages-markdown">Modèle de nommage des pages markdown</h3>
+
+<p>Les noms des pages markdown devront idéalement être préfixées par “spec-technique-[…].md”, “spec-fonctionnelle-[…].md”, “annexe-[…].md” et ensuite contenir un nom lisible pour que le nom de la page soit clair dans l’url finale. Exemple : spec-technique-flux-alimentation.md</p>
 
 
 
@@ -892,7 +890,7 @@ Usage: #definition
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Jan 30, 2026 15:21+0000">2026-01-30</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Fri, Jan 30, 2026 16:31+0000">2026-01-30</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
