Revise terminology management references
Updated references for terminology management best practices. ebc05943ba1236d63f459c2e677d245fa4dc04b9

--- a/nr-add-examples/ig/mod_bonnes_pratiques.html
+++ b/nr-add-examples/ig/mod_bonnes_pratiques.html
@@ -696,7 +696,7 @@ Usage: #example
 
 <h4 id="ressources-terminologiques--codesystem-valueset-et-conceptmap">Ressources terminologiques : CodeSystem, ValueSet et ConceptMap</h4>
 
-<p>Se référer au FHIR Terminology Service (FTS) du Serveur Multi Terminologies (SMT).</p>
+<p>Se référer aux bonnes pratiques de gestion des terminologies <a href="https://interop.esante.gouv.fr/terminologies/convention.html">de l’ANS</a> et d’<a href="https://build.fhir.org/ig/FHIR/ig-guidance/terminology.html">HL7 International</a>.</p>
 
 <h4 id="structuremap">StructureMap</h4>
 
@@ -891,7 +891,7 @@ Usage: #definition
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Wed, Feb 4, 2026 15:54+0000">2026-02-04</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, Feb 5, 2026 08:56+0000">2026-02-05</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
