--- a/nr-add-examples/ig/qa-ipreview.html
+++ b/nr-add-examples/ig/qa-ipreview.html
@@ -21,7 +21,7 @@
     <ul>
       <li>
 
-          IG &copy; 2020+ ANS.  Package ans.fr.documentation#0.1.9 based on FHIR 4.0.1. Generated 2026-02-04 
+          IG &copy; 2020+ ANS.  Package ans.fr.documentation#0.1.9 based on FHIR 4.0.1. Generated 2026-02-05 
           
            
             Liens: Table des matières  |
@@ -166,7 +166,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Wed, Feb 4, 2026 15:54+0000">2026-02-04</span>
+. Generated           <span title="Thu, Feb 5, 2026 08:56+0000">2026-02-05</span>
 
                     <br/>
 
@@ -196,7 +196,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Wed, Feb 4, 2026 15:54+0000">2026-02-04</span>
+. Generated           <span title="Thu, Feb 5, 2026 08:56+0000">2026-02-05</span>
 
                     <br/>
 
@@ -945,6 +945,19 @@ Une structure squelette indique sous quels dossiers placer les artéfacts fsh da
 Ci-dessous figurent les règles spécifiques à chaque type de ressource FHIR issus des           <a href="https://interop.aphp.fr/ig/fhir/core/best-practice.html">travaux de David Ouagne (AP-HP)</a>
  sous la forme de fiche.
 Chaque fiche présente les propriétés obligatoires de l’objet, avec le nom de la propriété puis sa valeur en respectant le format. Puis la règle de nommage du fichier contenant la ressource. Et enfin l’entête obligatoire du contenu du fichier de la ressource.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="mod_bonnes_pratiques.html">web</a>
+        </td>
+        <td>
+          <a href="https://interop.esante.gouv.fr/terminologies/convention.html">interop.esante.gouv.fr</a>
+        </td>
+        <td>
+Se référer aux bonnes pratiques de gestion des terminologies           <a href="https://interop.esante.gouv.fr/terminologies/convention.html">de l’ANS</a>
+ et d’          <a href="https://build.fhir.org/ig/FHIR/ig-guidance/terminology.html">HL7 International</a>
+.
         </td>
       </tr>
       <tr>
